--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
         </p1>
          <p>jeszcze jeden commit</p>
+               <p2>commit z zdalnego rep do lokalnego <p2>
           </section>
           
      </body>
